2012-07-21  JMB  Fixed N900 bugs, made packaging improvements

    Fixed a bug where the column statistics dialog didn't have the correct
    parent widget set when launched via the file properties dialog (mostly a
    problem on Maemo Fremantle, where this affects the dialog transition
    animation).  Also changed the way content gets added to HTML display
    widgets (such as the row viewer, the file properties dialog, and the
    column statistics dialog) in an attempt to work around a Qt bug which
    seems to cause intermittent crashes only on the N900.
    
    Moved the help files in the Fremantle package to the /opt partition so
    they don't consume limited space in the root partition.  Made assorted
    improvements to the build scripts so they don't require as much manual
    fiddling with each release (read version number from one file, etc.)

2012-07-19  JMB  Fixed column sorting and title bar bugs, fixed help on Maemo

    Fixed a recently-introduced bug where clicking on a column header to sort
    by that column would also show the column statistics dialog.  Also fixed
    a bug where the title bar wasn't always reflecting correctly if there were
    unsaved changes or not.  Fixed the Maemo packaging to correctly locate the
    new help files.

2012-07-18  JMB  Mac build updates, better language detection, install docs

    Updated the Mac build scripts to reflect Apple's current recommendations
    and the realities of compiling on Lion with Xcode 4.  Also updated the
    code for selecting the UI language to display based on changes in Qt 4.8
    which do a better job at providing the correct language settings from the
    system.  Updated the translation files to include phrases recently added
    to the Qt framework.

    Also broke out the platform-specific sections of the INSTALL file into
    their own files, which should make it easier to understand the build
    instructions.

2012-06-18  JMB  Added Slovak UI translation
