@@ -22,7 +22,7 @@
 	<key>CFBundleExecutable</key>
 	<string>PortaBase</string>
 	<key>CFBundleGetInfoString</key>
-	<string>2.0, (c) Jeremy Bowman, 2002-2010</string>
+	<string>2.1, (c) Jeremy Bowman, 2002-2012</string>
 	<key>CFBundleIconFile</key>
 	<string>@ICON@</string>
 	<key>CFBundleIdentifier</key>
@@ -32,12 +32,12 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.0</string>
+	<string>2.1</string>
 	<key>CFBundleSignature</key>
 	<string>PBas</string>
 	<key>CFBundleVersion</key>
-	<string>2.0.0f1</string>
+	<string>2.1.0f1</string>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.4.0</string>
+	<string>10.5.0</string>
 </dict>
 </plist>
