@@ -1,1 +1,32 @@
+#include <windows.h>
+
 IDI_ICON1               ICON    DISCARDABLE     "portabase.ico"
+
+VS_VERSION_INFO     VERSIONINFO
+FILEVERSION         2, 1, 0, 0
+PRODUCTVERSION      2, 1, 0, 0
+FILEFLAGSMASK       0x3fL
+FILEFLAGS           0
+FILEOS              VOS_NT_WINDOWS32
+FILETYPE            VFT_APP
+FILESUBTYPE         0
+BEGIN
+    BLOCK   "StringFileInfo"
+    BEGIN
+        BLOCK   "040904b0"
+        BEGIN
+            VALUE   "CompanyName",      "Jeremy Bowman\0"
+            VALUE   "FileDescription",  "PortaBase\0"
+            VALUE   "FileVersion",      "2.1\0"
+            VALUE   "InternalName",     "PortaBase\0"
+            VALUE   "LegalCopyright",   "Copyright 2002-2012 by Jeremy Bowman\0"
+            VALUE   "OriginalFilename", "PortaBase.exe\0"
+            VALUE   "ProductName",      "PortaBase\0"
+            VALUE   "ProductVersion",   "2.1\0"
+        END
+    END
+    BLOCK   "VarFileInfo"
+    BEGIN
+        VALUE   "Translation",  0x409,  1200
+    END
+END
